--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev --respawn --transpile-only ./http.js",
-    "dev": "ts-node-dev http.ts"
+    "dev": "ts-node-dev ./ASSIGNMENT/assignment.ts"
   },
   "keywords": [],
   "author": "",
