--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --respawn --transpile-only ./http.js",
-    "dev": "ts-node-dev ./ASSIGNMENT/assignment.ts"
+    "start": "ts-node-dev --respawn --transpile-only ./Site/GetPostMethod/NewHTTP.ts",
+    "dev": "ts-node-dev ./ASSIGNMENT/assignment2.ts"
   },
   "keywords": [],
   "author": "",
